--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.zy</groupId>
-    <artifactId>zy</artifactId>
+    <groupId>com.tetSpug</groupId>
+    <artifactId>tetSpug</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>zy</name>
-    <description>zy</description>
+    <name>tetSpug</name>
+    <description>tetSpug</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
