--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,7 @@
     <groupId>com.tetSpug</groupId>
     <artifactId>tetSpug</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>tetSpug</name>
-    <description>tetSpug</description>
+    <name>${project.artifactId}</name>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -31,10 +30,18 @@
     </dependencies>
 
     <build>
+        <finalName>${project.artifactId}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <skipTests>true</skipTests>
+                </configuration>
             </plugin>
         </plugins>
     </build>
